--- a/features.html
+++ b/features.html
@@ -40,21 +40,21 @@
 	    <div class="flex">
 	    	
 	    	<div>
-	    		<img src="https://via.placeholder.com/300x150.png" alt="fake title">
+	    		<img src="img/thumb_offline.png" alt="fake title">
 	    		<div class="txt">
 	    			<h3>Fully Offline!</h3>
 	    			<p>EmuTarkov emulates the official Escape From Tarkov experience by providing an offline server that 'communicates' with the game client as if it were online. EmuTarkov does not in any way support LAN gameplay. This is strictly a single player PVE experience.</p>
 	    		</div>
 	    	</div>
 	    	<div>
-	    		<img src="https://via.placeholder.com/300x150.png" alt="fake title">
+	    		<img src="img/thumb_progression.png" alt="fake title">
 	    		<div class="txt">
 	    			<h3>Player progression!</h3>
 	    			<p>EmuTarkov successfully implements progression through Offline Raids. Players do not have to worry about losing their full Tri-Zip or all of the experience gained from mowing down scavs in Customs or Interchange after successfully extracting. But, don't forget, your health, hydration and energy all persist after exiting a raid. So don't forget to drink a bottle of water and open up an MRE before going to the next raid. Don't let hunger stop you from becoming a hero from zero!</p>
 	    		</div>
 	    	</div>
 	    	<div>
-	    		<img src="https://via.placeholder.com/300x150.png" alt="fake title">
+	    		<img src="img/thumb_moddable" alt="fake title">
 	    		<div class="txt">
 	    			<h3>Mod support!</h3>
 	    			<p>Let's say you are a visionary. You think that an MPX should fire .50cal rounds, an IFAK should restore 1000 hit points, or maybe you think a gun should have your favorite anime character skin. Well, good news for you. EmuTarkov is fully moddable and you can make any weapon fire any cartridge, make medkits that heal 1000 hitpoints, or modify item skins to match your preferences.</p>
