--- a/features.html
+++ b/features.html
@@ -54,7 +54,7 @@
 	    		</div>
 	    	</div>
 	    	<div>
-	    		<img src="img/thumb_moddable" alt="fake title">
+	    		<img src="img/thumb_moddable.png" alt="fake title">
 	    		<div class="txt">
 	    			<h3>Mod support!</h3>
 	    			<p>Let's say you are a visionary. You think that an MPX should fire .50cal rounds, an IFAK should restore 1000 hit points, or maybe you think a gun should have your favorite anime character skin. Well, good news for you. EmuTarkov is fully moddable and you can make any weapon fire any cartridge, make medkits that heal 1000 hitpoints, or modify item skins to match your preferences.</p>
