Add links to wiki

--- a/features.html
+++ b/features.html
@@ -23,10 +23,11 @@
 			<label for="show-menu" class="show-menu">Menu</label>
 			<input type="checkbox" id="show-menu" role="button">
 			<ul>
-				<li><a href="index.html" title="Home">Home</a></li>
-				<li><a href="features.html" class="active" title="Features">Features</a></li>
-				<li><a href="https://github.com/justemutarkov/" target="_blank" title="GitHub">GitHub</a></li>
+				<li><a href="index.html" class="active" title="Home">Home</a></li>
+				<li><a href="features.html" title="Features">Features</a></li>
 				<li><a href="https://discord.gg/3sR4KKS" target="_blank" title="Discord">Discord</a></li>
+				<li><a href="https://github.com/justemutarkov" target="_blank" title="GitHub">GitHub</a></li>
+				<li><a href="https://justemutarkov.github.io/Wiki" target="_blank" title="Wiki">Wiki</a></li>
 			</ul>
 		</nav>
 	</div>
