--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 			<ul>
 				<li><a href="index.html" class="active" title="Home">Home</a></li>
 				<li><a href="features.html" title="Features">Features</a></li>
-				<li><a href="https://github.com/justemutarkov/" target="_blank" title="GitHub">GitHub</a></li>
 				<li><a href="https://discord.gg/3sR4KKS" target="_blank" title="Discord">Discord</a></li>
+				<li><a href="https://github.com/justemutarkov" target="_blank" title="GitHub">GitHub</a></li>
+				<li><a href="https://justemutarkov.github.io/Wiki" target="_blank" title="Wiki">Wiki</a></li>
 			</ul>
 		</nav>
 	</div>
